dashboard footer design issue solved on mobile responsive

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10775,6 +10775,6 @@ padding-left: 70px;
   }
 }
 
-.dashboardFooter{
+#dashboardFooter{
   height: auto !important;
 }
